# makelove

./: pyproject.toml  setup.py
makelove/: __init__.py  config.py  linux.py  macos.py  makelove.py  util.py  windows.py
